--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+/* .comfortaa {
+	font-family: 'Comfortaa', sans-serif !important;
+}
+
+.orbitron {
+	font-family: 'Orbitron', sans-serif !important;
+} */
+
 :root {
 	--foreground-rgb: 255, 255, 255;
-	--background-start-rgb: 10, 6, 65; /* 0A0641 */
-	--background-end-rgb: 10, 6, 65; /* 0A0641 */
+	--background-start-rgb: 0, 0, 0;
+	--background-end-rgb: 0, 0, 0;
 }
 
 body {
 	background: rgb(var(--background-start-rgb)) !important;
+}
+
+@layer utilities {
+	.glass-component-1 {
+		@apply bg-white/5 backdrop-blur-md;
+	}
+	.glass-component-2 {
+		@apply bg-white/15 backdrop-blur-md;
+	}
 }
