--- a/app/globals.css
+++ b/app/globals.css
@@ -22,9 +22,13 @@ body {
 
 @layer utilities {
 	.glass-component-1 {
-		@apply bg-white/5 backdrop-blur-md;
+		@apply bg-white/5 backdrop-blur-md border border-white/15;
 	}
 	.glass-component-2 {
-		@apply bg-white/15 backdrop-blur-md;
+		@apply bg-white/5 backdrop-blur-sm border border-white/15;
+	}
+
+	.glass-component-3 {
+		@apply bg-white/15 backdrop-blur-sm border border-white/15;
 	}
 }
