--- a/app/globals.css
+++ b/app/globals.css
@@ -17,9 +17,30 @@
 }
 
 body {
-	background: rgb(var(--background-start-rgb)) !important;
+	background: black;
+	color: var(--foreground);
+	font-family: Arial, Helvetica, sans-serif;
 }
 
+::view-transition-group(root) {
+	z-index: auto !important;
+}
+
+::view-transition-image-pair(root) {
+	isolation: isolate;
+	will-change: transform, opacity, scale;
+	z-index: 1;
+}
+
+::view-transition-new(root) {
+	z-index: 2;
+	animation: none !important;
+}
+
+::view-transition-old(root) {
+	z-index: 1;
+	animation: none !important;
+}
 @layer utilities {
 	.glass-component-1 {
 		@apply bg-white/5 backdrop-blur-md border border-white/15;
@@ -34,6 +55,10 @@ body {
 
 	.warm-cool-text {
 		@apply bg-gradient-to-r from-[#E05D5F] to-[#609FE3] text-transparent bg-clip-text;
+	}
+
+	.warm-cool-bg {
+		@apply bg-gradient-to-r from-[#F05550] via-[#AD7386] to-[#54A4F2];
 	}
 
 	.section-container {
